# new_admin_panel_sprint_3

./: .gitignore  Makefile
docker_compose/: .gitignore  Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml
docker_compose/nginx/: Dockerfile.nginx  nginx.conf
docker_compose/nginx/conf.d/: site.conf
docker_compose/utils/create_postgres_schema/: movies_database_schema.sql
movies_admin/: Makefile  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
movies_admin/config/: settings.py  urls.py
movies_admin/config/components/: database.py
movies_admin/movies/: admin.py  models.py
movies_admin/movies/api/v1/: pagination.py  serializers.py  urls.py  views.py
movies_admin/movies/locale/en/LC_MESSAGES/: django.po
movies_admin/movies/locale/ru/LC_MESSAGES/: django.mo  django.po
movies_admin/movies/migrations/: 0001_initial.py  0002_filmwork_file_path.py
postgres_to_es/: .dockerignore  .env.example  .gitignore  Dockerfile.etl  Makefile  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  settings.py
postgres_to_es/clients/: base_client.py  elk.py  postgres.py
postgres_to_es/etl/: etl.py
postgres_to_es/etl/extractor/: extract.py  fetch_from_postgres.py  queries.py
postgres_to_es/etl/loader/: load.py
postgres_to_es/etl/transformer/: transform.py
postgres_to_es/etl/utils/: logger.py
postgres_to_es/models/: models.py
postgres_to_es/state/: json_file_storage.py  models.py  state.py  storage.py
postgres_to_es/utils/: logger.py  reconnect.py
